--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
-    "heroku-postbuild": "cd client && npm run build"
+    "heroku-postbuild": "cd client && npm run build",
+    "webpack": "webpack --watch",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +21,8 @@
     "react-bootstrap": "^1.4.0"
   },
   "devDependencies": {
-    "concurrently": "^5.1.0"
+    "concurrently": "^5.1.0",
+    "webpack-cli": "^4.1.0",
+    "webpack-pwa-manifest": "^4.2.0"
   }
 }
